# pygdk

./: .gitignore  README.md  circles.py  feeds-and-speeds.json  kossel.json  onefinity.json  orac.json  pyproject.toml  rf30.json  test.py  tools.json
examples/: lettering.py  load-filament.py  mill_bangle.py  mill_bolt_circle.py  mill_circular_pocket.py  mill_frame.py  mill_helix.py  mill_micromesh_box.py  mill_pocket_circle.py  mill_rectangular_pocket.py  mill_round_cutting_board.py  pen_calibration.py  plotter_rainbow_benzene.py  plotter_spirals.py  plotter_turtle_circles.py  plotter_turtle_hexagon.py  plotter_turtle_tree.py  plotter_twist.py  round_cutting_board.py  unload-filament.py  unsupported_table.py
examples/turtle/: day001-squares.py
machines/: kossel.json  onefinity.json
machines/tests/: bad_tt.json  no_tt.json
pygdk/: __init__.py  accessory.py  controller.py  fdm_printer.py  lathe.py  machine.py  mill.py  plotter.py  tool.py  tpl.py  turtle.py
tables/: feeds-and-speeds.json  filament.json  l-systems.json  tools.json  turning_tools.json
tests/test_examples/: test_bangle.py  test_micromesh_box.py  test_rainbow_benzene.py  test_turtle_circles.py  test_turtle_hexagon.py  test_turtle_tree.py  test_twist.py
tests/test_machine/: bad_filament.json  test_fdm_printer.py  test_lathe.py  test_mill.py  test_plotter.py
tests/test_turtle/: test_2d.py  test_squirtle.py
utils/: calibrate_extrusion_multiplier.py  calibration_cube.py  calibration_square.py  fdm_printer_calibrate_accel.py  fdm_printer_calibrate_temperature.py  true_3d_print.py
(+15 files in other folders)
